--- a/Section-03-Variable-Characteristics/03.1-Missing-Data.ipynb
+++ b/Section-03-Variable-Characteristics/03.1-Missing-Data.ipynb
@@ -929,9 +929,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feml",
+   "display_name": "Python 3.9.14 ('feat_eng': venv)",
    "language": "python",
-   "name": "feml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -943,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.14"
   },
   "toc": {
    "base_numbering": 1,
@@ -957,6 +957,11 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": true
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d63a9c267cde025ea13b114626bcee230b2a8f7a5dd4ab0ed32600717d58a84f"
+   }
   }
  },
  "nbformat": 4,
