--- a/Section-03-Variable-Characteristics/03.7-Variable-magnitude.ipynb
+++ b/Section-03-Variable-Characteristics/03.7-Variable-magnitude.ipynb
@@ -699,9 +699,9 @@
      "output_type": "stream",
      "text": [
       "Train set\n",
-      "KNN roc-auc: 0.8149809549207755\n",
+      "KNN roc-auc: 0.8087718062383327\n",
       "Test set\n",
-      "KNN roc-auc: 0.6865632431834522\n"
+      "KNN roc-auc: 0.6764697749018307\n"
      ]
     }
    ],
@@ -733,9 +733,9 @@
      "output_type": "stream",
      "text": [
       "Train set\n",
-      "KNN roc-auc: 0.8260281072159968\n",
+      "KNN roc-auc: 0.8276281957743572\n",
       "Test set\n",
-      "KNN roc-auc: 0.7206183286322659\n"
+      "KNN roc-auc: 0.721033128698634\n"
      ]
     }
    ],
@@ -944,9 +944,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feml",
+   "display_name": "Python 3.9.14 ('feat_eng': venv)",
    "language": "python",
-   "name": "feml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -958,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.14"
   },
   "toc": {
    "base_numbering": 1,
@@ -972,6 +972,11 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": true
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d63a9c267cde025ea13b114626bcee230b2a8f7a5dd4ab0ed32600717d58a84f"
+   }
   }
  },
  "nbformat": 4,
