--- a/Section-12-Engineering-Date-Time/12.02_Engineering_time.ipynb
+++ b/Section-12-Engineering-Date-Time/12.02_Engineering_time.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -641,6 +641,7 @@
        "      <th>Start_date</th>\n",
        "      <th>End_date</th>\n",
        "      <th>diff_seconds</th>\n",
+       "      <th>diff_minutes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -649,59 +650,66 @@
        "      <td>2012-01-31 12:00:00</td>\n",
        "      <td>2013-03-17 21:45:00</td>\n",
        "      <td>35545500.0</td>\n",
+       "      <td>592425.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2012-02-29 12:00:00</td>\n",
        "      <td>2013-03-24 21:45:00</td>\n",
        "      <td>33644700.0</td>\n",
+       "      <td>560745.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2012-03-31 12:00:00</td>\n",
        "      <td>2013-03-31 21:45:00</td>\n",
        "      <td>31571100.0</td>\n",
+       "      <td>526185.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2012-04-30 12:00:00</td>\n",
        "      <td>2013-04-07 21:45:00</td>\n",
        "      <td>29583900.0</td>\n",
+       "      <td>493065.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2012-05-31 12:00:00</td>\n",
        "      <td>2013-04-14 21:45:00</td>\n",
        "      <td>27510300.0</td>\n",
+       "      <td>458505.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2012-06-30 12:00:00</td>\n",
        "      <td>2013-04-21 21:45:00</td>\n",
        "      <td>25523100.0</td>\n",
+       "      <td>425385.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2012-07-31 12:00:00</td>\n",
        "      <td>2013-04-28 21:45:00</td>\n",
        "      <td>23449500.0</td>\n",
+       "      <td>390825.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Start_date            End_date  diff_seconds\n",
-       "0 2012-01-31 12:00:00 2013-03-17 21:45:00    35545500.0\n",
-       "1 2012-02-29 12:00:00 2013-03-24 21:45:00    33644700.0\n",
-       "2 2012-03-31 12:00:00 2013-03-31 21:45:00    31571100.0\n",
-       "3 2012-04-30 12:00:00 2013-04-07 21:45:00    29583900.0\n",
-       "4 2012-05-31 12:00:00 2013-04-14 21:45:00    27510300.0\n",
-       "5 2012-06-30 12:00:00 2013-04-21 21:45:00    25523100.0\n",
-       "6 2012-07-31 12:00:00 2013-04-28 21:45:00    23449500.0"
+       "           Start_date            End_date  diff_seconds  diff_minutes\n",
+       "0 2012-01-31 12:00:00 2013-03-17 21:45:00    35545500.0      592425.0\n",
+       "1 2012-02-29 12:00:00 2013-03-24 21:45:00    33644700.0      560745.0\n",
+       "2 2012-03-31 12:00:00 2013-03-31 21:45:00    31571100.0      526185.0\n",
+       "3 2012-04-30 12:00:00 2013-04-07 21:45:00    29583900.0      493065.0\n",
+       "4 2012-05-31 12:00:00 2013-04-14 21:45:00    27510300.0      458505.0\n",
+       "5 2012-06-30 12:00:00 2013-04-21 21:45:00    25523100.0      425385.0\n",
+       "6 2012-07-31 12:00:00 2013-04-28 21:45:00    23449500.0      390825.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -743,6 +751,7 @@
        "      <th>Start_date</th>\n",
        "      <th>End_date</th>\n",
        "      <th>diff_seconds</th>\n",
+       "      <th>diff_minutes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -750,42 +759,49 @@
        "      <th>0</th>\n",
        "      <td>2012-01-31 12:00:00</td>\n",
        "      <td>2013-03-17 21:45:00</td>\n",
+       "      <td>35545500.0</td>\n",
        "      <td>592425.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2012-02-29 12:00:00</td>\n",
        "      <td>2013-03-24 21:45:00</td>\n",
+       "      <td>33644700.0</td>\n",
        "      <td>560745.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2012-03-31 12:00:00</td>\n",
        "      <td>2013-03-31 21:45:00</td>\n",
+       "      <td>31571100.0</td>\n",
        "      <td>526185.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2012-04-30 12:00:00</td>\n",
        "      <td>2013-04-07 21:45:00</td>\n",
+       "      <td>29583900.0</td>\n",
        "      <td>493065.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2012-05-31 12:00:00</td>\n",
        "      <td>2013-04-14 21:45:00</td>\n",
+       "      <td>27510300.0</td>\n",
        "      <td>458505.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2012-06-30 12:00:00</td>\n",
        "      <td>2013-04-21 21:45:00</td>\n",
+       "      <td>25523100.0</td>\n",
        "      <td>425385.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2012-07-31 12:00:00</td>\n",
        "      <td>2013-04-28 21:45:00</td>\n",
+       "      <td>23449500.0</td>\n",
        "      <td>390825.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -793,17 +809,17 @@
        "</div>"
       ],
       "text/plain": [
-       "           Start_date            End_date  diff_seconds\n",
-       "0 2012-01-31 12:00:00 2013-03-17 21:45:00      592425.0\n",
-       "1 2012-02-29 12:00:00 2013-03-24 21:45:00      560745.0\n",
-       "2 2012-03-31 12:00:00 2013-03-31 21:45:00      526185.0\n",
-       "3 2012-04-30 12:00:00 2013-04-07 21:45:00      493065.0\n",
-       "4 2012-05-31 12:00:00 2013-04-14 21:45:00      458505.0\n",
-       "5 2012-06-30 12:00:00 2013-04-21 21:45:00      425385.0\n",
-       "6 2012-07-31 12:00:00 2013-04-28 21:45:00      390825.0"
+       "           Start_date            End_date  diff_seconds  diff_minutes\n",
+       "0 2012-01-31 12:00:00 2013-03-17 21:45:00    35545500.0      592425.0\n",
+       "1 2012-02-29 12:00:00 2013-03-24 21:45:00    33644700.0      560745.0\n",
+       "2 2012-03-31 12:00:00 2013-03-31 21:45:00    31571100.0      526185.0\n",
+       "3 2012-04-30 12:00:00 2013-04-07 21:45:00    29583900.0      493065.0\n",
+       "4 2012-05-31 12:00:00 2013-04-14 21:45:00    27510300.0      458505.0\n",
+       "5 2012-06-30 12:00:00 2013-04-21 21:45:00    25523100.0      425385.0\n",
+       "6 2012-07-31 12:00:00 2013-04-28 21:45:00    23449500.0      390825.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,8 +827,8 @@
    "source": [
     "# let's calculate the time elapsed in minutes\n",
     "\n",
-    "df['diff_seconds'] = df['End_date'] - df['Start_date']\n",
-    "df['diff_seconds']=df['diff_seconds']/np.timedelta64(1,'m')\n",
+    "df['diff_minutes'] = df['End_date'] - df['Start_date']\n",
+    "df['diff_minutes']=df['diff_minutes']/np.timedelta64(1,'m')\n",
     "df"
    ]
   },
@@ -834,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +916,7 @@
        "2  2014-08-01 11:00:00-05:00"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1036,7 @@
        "2 2014-08-01 17:00:00+01:00  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,9 +1075,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feml",
+   "display_name": "Python 3.9.14 ('feat_eng': venv)",
    "language": "python",
-   "name": "feml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1073,7 +1089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.14"
   },
   "toc": {
    "nav_menu": {},
@@ -1084,6 +1100,11 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": true
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d63a9c267cde025ea13b114626bcee230b2a8f7a5dd4ab0ed32600717d58a84f"
+   }
   }
  },
  "nbformat": 4,
